<resources>
    <string name="app_name">MBQs CPU Guide</string>
    <string name="action_settings">Settings</string>
    <string name="build_date">Build Date</string>
    <string name="theme">Theme</string>
    <string name="changelog">Changelog</string>
    <string name="version">Version</string>
	<string name="current_version">Alpha 6</string>
    <string name="welcome_to_my_cpu_guide_">Welcome to my CPU Guide!</string>
    <string name="please_slide_right_to_open_the_menu_">Please slide right to open the menu.</string>
    <string name="cpu_governors">CPU Governors</string>
    <string name="i_o_schedulers">I/O Schedulers</string>
    <string name="tcp_algorithms">TCP Algorithms</string>
    <string name="help">Help</string>
    <string name="general">General</string>
    <string name="governors">Governors</string>
    <string name="bfq_def">Gives each request a time budget. If the request is not met by the time it is given, the request is skipped. Smarter than the CFQ governor.</string>
    <string name="bfq">BFQ</string>
    <string name="android_tips_section">Android tips section</string>
    <string name="tips">Tips</string>
    <string name="autobrightness_info">Download an app called \'lux\' and use that app. It\'ll take of any problems you\'re having, plus it\'ll save battery.</string>
    <string name="autobrightness_sucks">Auto-brightness sucks</string>
    <string name="better_battery_life_content">TBD</string>
    <string name="better_battery_life_header">Better battery life</string>
    <string name="block_ads_content">Download an app called \'adblock\' on the play store, run it normally, accept the SU request, hit \'skip\' and run the program, exit out, and reboot!</string>
    <string name="block_ads">Block ads</string>
    <string name="brazilian_wax_definition">Similar to smartassV2, the only real difference is, it scales more aggressively than SAv2 does, which reduces battery life, while improving performance.</string>
    <string name="brazilianwax">BrazilianWax</string>
    <string name="cfq_definition">\'Completely Fair Queuing\' scheduler. Scales its requests in an effort to insure smooth task handling. Attempts to give each request equal I/O bandwidth. Typically, lag happens with this scheduler due to the effort of competing tasks on the disk because it tries to give equal bandwidth amongst all requests.</string>
    <string name="cfq">CFQ</string>
    <string name="change_boot_animation_content">Go to system/media, you\'ll see bootanimation.zip, replace it with your desired bootanimation, change permissions to r-w-rr (read-write-read-read), and reboot. (Assuming you\'re doing this on your phone)</string>
    <string name="change_your_bootanimation">Change your bootanimation</string>
    <string name="change_screen_density_content">In your build.prop, there is a line of code that looks like this: ro.sf.lcd_density=320, change it to 240 for a tablet-ish feel. Don\'t go under 160 though, you\'ll have endless bootloops</string>
    <string name="change_dpi">Change DPI</string>
    <string name="conservative_definition">"Conservative means that it scales conservatively, not that it is conservative. It pretty much very similar to Interactive in that it scales up and down in frequency steps. It actually can be one of the most aggressive governors out there. "</string>
    <string name="conservative">Conservative</string>
    <string name="cpu_governors_content">Controls the CPU speeds and how processes are handled.</string>
    <string name="cubic_definition">One of the best, most recommended TCP options available. Less aggressive, Inflects the windows prior to the event. Used in Linux.</string>
    <string name="cubic">Cubic</string>
    <string name="deadline_definition">Set to minimize starving of requests. In other words, it is designed to handle system requests as quickly as possible.</string>
    <string name="deadline">Deadline</string>
    <string name="developer_options_content">Go to settings>build number... And tap \'build number\' 7 times, go back, and you have now enabled developer options.</string>
    <string name="developer_options">Developer options</string>
    <string name="dyninteractive_definition">A dynamic interactive Governor. This Governor dynamically adapts it\'s own CPU frequencies within your parameters based off the system(s) load.</string>
    <string name="dyninteractive">DynInteractive</string>
    <string name="fifo_definition">Takes each process in one by one, fair process queuing, balanced queue handling as well, processes go in and out in a numerical</string>
    <string name="fifo">FIFO</string>
    <string name="fiops_definition">Relatively new. No I/O seek time, ( potentially better for performance), balanced read/write times, one of the smarter I/O schedulers</string>
    <string name="fiops">FIOPS</string>
    <string name="force_gpu_rendering_content">What it does is, it force enabled 2D drawing (such as scrolling, and anything non-game/app related) to the Graphical Processing Unit, instead of the Central Processing unit. What does/can this do? It has the potential to save battery life, and takes some of the load off of your CPU, which increases overall smoothness and reduces lag.</string>
    <string name="force_gpu_rendering">Force GPU Rendering</string>
    <string name="help_section_content">TBD</string>
    <string name="help_header_in_layout">Coming soon.</string>
    <string name="hotplug_definition">Based off of Ondemand. It allows a CPU to go offline with minimal usage. When you\'re sending messages, browsing settings, or other simple tasks, most likely one of your CPUs will be offline.</string>
    <string name="hotplug">Hotplug</string>
    <string name="hotplug_x_definition">Its basically a smarter Hotplug, to my knowledge, it shuts off the second core much faster, and is a little bit smarter with CPU scaling and power efficiency.</string>
    <string name="hotplugx">HotplugX</string>
    <string name="hybla_definition">Penalizes connections that use satellite radio. Not usually used with phones.</string>
    <string name="hybla">Hybla</string>
    <string name="interactive_definition">Interactive scales by default in steps towards max frequency, Ondemand in its default implementation scales immediately to max frequency. (AndreiLux)</string>
    <string name="interactive">Interactive</string>
    <string name="interactive_x_definition">The same as Interactive, but when you turn your screen off it forces the second CPU core offline until the screen turns on again.</string>
    <string name="interactivex">InteractiveX</string>
    <string name="ioscheduler_definition">Control how incoming processes are determined.</string>
    <string name="i_o_schedulers_header_in_layout">I/O Schedulers</string>
    <string name="lagfree_definition">More aggressive kernel. It scales the CPU faster, reducing lag and performance, while maintaining decent battery life. Its main goal is to increase performance without reducing battery life.</string>
    <string name="lagfree">Lagfree</string>
    <string name="lazy_definition">This Governor doesn\'t scale as fast. It\'s really a lazy governor, it tends to stick in the same CPU frequency without changing as much. Which can be beneficial to your battery (if your CPU settings are conservative) or can reduce battery life (if your chosen frequencies are aggressive).</string>
    <string name="lazy">Lazy</string>
    <string name="lionheart_definition">Conservative-based governor off of Samsung update3 source (Line copied directly from a guide, thank you \'Amal Das\'), scales aggressively. This Governor is strictly for performance.</string>
    <string name="lionheart">Lionheart</string>
    <string name="lulzactive_definition">Based off of the Smartass and Interactive governor(s), the newer version of this Governor gives more control to the user, and he CPU frequency parameters (Ask for a description if you need one) are smarter. Smart at scaling both up and down.</string>
    <string name="lulzactive">Lulzactive</string>
    <string name="minmax_definition">Only uses your max screen on frequency, and your min screen on frequency.</string>
    <string name="min_max">Min Max</string>
    <string name="msaa_content">4 times MultiSample Anti-Aliasing. What this does is smooths out edges in apps that support AA. It makes your game look better, enhances graphics, but has the potential to degrade performance due to the screen enhancement. To enable this, go to settings>developer options>and check the box that says \'Force 4x MSAA\'</string>
    <string name="_4x_msaa">4x MSAA</string>
    <string name="nephilims_settings_content">Small Text</string>
    <string name="nephilims_settings_header">Medium Text</string>
    <string name="nightmare_definition">A modified PegasusQ, less aggressive (Which means not as good performance-wise), and doesn\'t usually hotplug. It is good for a balance between performance and battery life. May prevent the \'Screen of death\' as well, since it doesn\'t hotplug.</string>
    <string name="nightmare">Nightmare</string>
    <string name="noop_definition">It handles requests in a basic \'first in, first out\' order. So any requests that come in, will also be the first to be executed.</string>
    <string name="noop">Noop</string>
    <string name="ondemand_definition">Ondemand stands for that it scales up on load in frequency and then detects the load and scales back to a frequency which is fullfills the "demand" of the current load dynamically.</string>
    <string name="ondemand">OnDemand</string>
    <string name="ondemandplus_definition">A governor based off of OnDemand and Interactive. It provides a balance between performance, and saving battery.</string>
    <string name="ondemandplus">OndemandPlus</string>
    <string name="pegasusq_definition">Samsungs Governor for multi-core phones. Based off of Ondemand. This kernel controls hotplugging as well.</string>
    <string name="pegasusq">PegasusQ</string>
    <string name="performance_definition">Will constantly run at the highest set CPU speed.</string>
    <string name="performance">Performance</string>
    <string name="powersave_definition">Will constantly use your lowest set CPU speed.</string>
    <string name="powersave">Powersave</string>
    <string name="reno_definition">Basically the same as Tahoe, but.. if 3 of the same packets are received, it will halve the window, instead of reducing it to one MSS. It changes the slow start threshold equal to that of the congestion window.</string>
    <string name="reno">Reno</string>
    <string name="row_definition">Read Over Write. It will cause better read times for pictures/media, but when transferring data/installing apps, significant reduction of performance will be present.</string>
    <string name="row">ROW</string>
    <string name="sakuractive_definition">A governor based off of hotplug and ondemand. The phone hotplugs (when it can) when the screen is on, and can be described as a \'hybrid\' of hotplug and ondemand</string>
    <string name="sakuractive">Sakuractive</string>
    <string name="savagedzen_definition">Based off of SmartassV2, similar to BrazilianWax, but this Governor tends to favor battery over performance. From personal experience, I can say it does a great job of doing so.</string>
    <string name="savagedzen">SavagedZen</string>
    <string name="scary_definition">Conservative-based Governor with some smartass features. Ramps speed up one at a time, and ramps speed down one at a time (ask for description if you don\'t understand). Caps your screen off speed at 245MHz. Scales just like conservative would. This Governor is more for battery life than performance.</string>
    <string name="scary">Scary</string>
    <string name="sio_definition">A mix between Noop and Deadline. Basic process/request merging. One of the most reliable schedulers out there.</string>
    <string name="sio">SIO</string>
</resources>