<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:visible="true" android:enabled="true">
    </item>
    
    <item 
        android:id="@+id/builddate" 
        android:title="@string/build_date" android:visible="true" android:enabled="true">     
    </item>
    
    <item 
        android:id="@+id/theme" 
        android:title="@string/theme" android:visible="true" android:enabled="true">       
    </item>
   
    <item 
        android:id="@+id/changelog" 
        android:title="@string/changelog" android:visible="true" android:enabled="true">
    </item>
    
    <item 
        android:id="@+id/version" 
        android:title="@string/version" android:visible="true" android:enabled="true"> 
    </item>

</menu>
